feat: add docs for post endpoint
